# windesheimtoicalrust

./: .gitignore  README.md
.github/workflows/: rust.yml
api/: Cargo.toml  ical.ics
api/src/: api.rs  les.rs  main.rs  rooster.rs
