[package]
name = "api"
version = "0.1.0"
authors = ["broodroosterdev <31385368+broodroosterdev@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.2"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
reqwest = "0.9.22"
web_ical = "0.1.2"
chrono = "0.4.9"
chrono-tz = "0.4"
[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["json"]